<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    app:layoutDescription="@xml/fragment_overview_scene"
    tools:context=".ui.fragments.overview.OverviewFragment">

    <ImageView
        android:id="@+id/mainImageView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/gradient_overlay"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
        app:layout_constraintEnd_toEndOf="@+id/main_imageView"
        app:layout_constraintStart_toStartOf="@+id/main_imageView"
        app:layout_constraintTop_toTopOf="@+id/main_imageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/likeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:text="1"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/mainImageView"
        app:layout_constraintEnd_toStartOf="@+id/timeTextView" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/mainImageView"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/heartImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_heart"
        app:layout_constraintBottom_toTopOf="@+id/likeTextView"
        app:layout_constraintEnd_toEndOf="@+id/likeTextView"
        app:layout_constraintStart_toStartOf="@+id/likeTextView"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/timeImageVIew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_clock"
        app:layout_constraintBottom_toTopOf="@+id/timeTextView"
        app:layout_constraintEnd_toEndOf="@+id/timeTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/timeTextView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/courgette"
        android:text="Title"
        android:textColor="@color/darkGray"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainImageView" />

    <ImageView
        android:id="@+id/veganImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:tint="@color/darkGray" />

    <ImageView
        android:id="@+id/dairyFreeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toEndOf="@+id/veganTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:tint="@color/darkGray" />

    <ImageView
        android:id="@+id/cheapImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toEndOf="@+id/glutenFreeTextView"
        app:layout_constraintTop_toBottomOf="@+id/healthyImageView"
        app:tint="@color/darkGray" />

    <ImageView
        android:id="@+id/vegetarianImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veganImageView"
        app:tint="@color/darkGray" />

    <ImageView
        android:id="@+id/glutenFreeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toEndOf="@+id/vegitarianTextView"
        app:layout_constraintTop_toBottomOf="@+id/dairyFreeImageView"
        app:tint="@color/darkGray" />

    <ImageView
        android:id="@+id/healthyImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_checkmark"
        app:layout_constraintStart_toEndOf="@+id/dairyFoodTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/veganTextView"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:gravity="center_vertical"
        android:text="@string/vegan"
        app:layout_constraintBottom_toBottomOf="@+id/veganImageView"
        app:layout_constraintStart_toEndOf="@+id/veganImageView"
        app:layout_constraintTop_toTopOf="@+id/veganImageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/cheapTextView"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:gravity="center_vertical"
        android:text="@string/cheap"
        app:layout_constraintBottom_toBottomOf="@+id/cheapImageView"
        app:layout_constraintStart_toEndOf="@+id/cheapImageView"
        app:layout_constraintTop_toTopOf="@+id/cheapImageView" />

    <TextView
        android:id="@+id/glutenFreeTextView"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:gravity="center_vertical"
        android:text="@string/gulten"
        app:layout_constraintBottom_toBottomOf="@+id/glutenFreeImageView"
        app:layout_constraintStart_toEndOf="@+id/glutenFreeImageView"
        app:layout_constraintTop_toTopOf="@+id/glutenFreeImageView" />

    <TextView
        android:id="@+id/vegitarianTextView"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:gravity="center_vertical"
        android:text="@string/vegitarian"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarianImageView"
        app:layout_constraintStart_toEndOf="@+id/vegetarianImageView"
        app:layout_constraintTop_toTopOf="@+id/vegetarianImageView" />

    <TextView
        android:id="@+id/healthyTextView"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:gravity="center_vertical"
        android:text="@string/healthy"
        app:layout_constraintBottom_toBottomOf="@+id/healthyImageView"
        app:layout_constraintStart_toEndOf="@+id/healthyImageView"
        app:layout_constraintTop_toTopOf="@+id/healthyImageView" />

    <TextView
        android:id="@+id/dairyFoodTextView"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:gravity="center_vertical"
        android:text="@string/dairy_food"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/dairyFreeImageView"
        app:layout_constraintStart_toEndOf="@+id/dairyFreeImageView"
        app:layout_constraintTop_toTopOf="@+id/dairyFreeImageView" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glutenFreeTextView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/summaryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.motion.widget.MotionLayout>